--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.3",
-    "@iconify-json/lucide": "^1.2.94"
+    "@iconify-json/lucide": "^1.2.94",
+    "sass-embedded": "^1.97.3"
   }
 }
